<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_entry_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/unit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_entry_unit"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/unit_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/uric_acid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dn_entry_uric_acid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/uric_acid_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/kcal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_entry_kcal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/kcal_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/button_save"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/btn_db_entry_save" />
        <Button
            android:id="@+id/button_cancel"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/btn_db_entry_cancel" />
        <Button
            android:id="@+id/button_delete"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/btn_db_entry_delete" />

    </LinearLayout>

</LinearLayout>